--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Yumiao Hui / Student"
+title                    : "Yumiao Hui / 回煜淼"
 title_separator          : "-"
 name                     : &name "Yumiao Hui"
 description              : &description "personal description"
