--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ author:
   soundcloud       :
   steam            :
   tumblr           :
-  twitter          : "JennyHwei04"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
