--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "About me"
   avatar           : "self.jpg"
-  bio              : "2nd Year MS in Applied Statistics@UM, looking for Stats/Information Science/Survey Science PhD in 23 Fall"
+  bio              : "2nd Year MS in Applied Statistics@UM, applying for Statistics/Information/Survey PhD in 23 Fall"
   location         : "Ann Arbor, MI"
   employer         :
   researchgate     : "https://www.researchgate.net/profile/Yumiao-Hui-2"
