--- a/_config.yml
+++ b/_config.yml
@@ -184,6 +184,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  courses:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
