--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,21 +2,22 @@
 main:
   - title: "Publications"
     url: /publications/
+    
+  - title: "Portfolio"
+    url: /portfolio/
 
   - title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "Mentoring"
     url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
     
   - title: "CV"
     url: /cv/
+
+  - title: "Courses"
+    url: /courses/
     
-  - title: "Guide"
-    url: /markdown/
+  - title: "Blog Posts"
+    url: /year-archive/
+    
