--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Talks"
     url: /talks/    
 
-  - title: "Mentoring"
+  - title: "Teaching"
     url: /teaching/    
     
   - title: "CV"
