--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "About me"
   avatar           : "self.jpg"
-  bio              : "2nd Year MS in Applied Statistics@UM, applying for Statistics/Information/Survey PhD in 23 Fall"
-  location         : "Ann Arbor, MI"
+  bio              : "2nd Year PhD in Stat@UVA, MS in Stat@UM 2023"
+  location         : "Charlottesville, VA"
   employer         :
   researchgate     : "https://www.researchgate.net/profile/Yumiao-Hui-2"
   googlescholar    : "https://scholar.google.com/citations?user=jklS8WYAAAAJ&hl=en"
