--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "About me"
   avatar           : "self.jpg"
-  bio              : "2nd Year PhD in Stat@UVA, MS in Stat@UM 2023"
+  bio              : "3rd Year PhD in Stat@UVA, MS in Stat@UM 2023"
   location         : "Charlottesville, VA"
   employer         :
   researchgate     : "https://www.researchgate.net/profile/Yumiao-Hui-2"
